--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "comp392-lesson10",
+  "name": "dodgethemeteorshower",
   "version": "1.0.0",
-  "description": "COMP392-Lesson 10 for Centennial College",
+  "description": "COMP392-Final Project for Centennial College",
   "main": "game.js",
   "dependencies": {
     "typescript": "^1.8.7"
@@ -18,12 +18,12 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/CentennialCollege/COMP392-Lesson10.git"
+    "url": "git+https://github.com/300833356COMP392/DodgeTheMeteorShower.git"
   },
   "author": "Tom Tsiliopoulos",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/CentennialCollege/COMP392-Lesson10/issues"
+    "url": "https://github.com/300833356COMP392/DodgeTheMeteorShower/issues"
   },
-  "homepage": "https://github.com/CentennialCollege/COMP392-Lesson10#readme"
+  "homepage": "https://github.com/300833356COMP392/DodgeTheMeteorShower#readme"
 }
